[tool.poetry]
name = "python-fastapi-api"
version = "0.1.0"
description = "api simples usando fastapi"
authors = ["emrehliug <guigui410@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
